Fixed overflow behavior for chat container

--- a/src/index.css
+++ b/src/index.css
@@ -304,6 +304,9 @@
   .pr-60 {
     padding-right: calc(var(--spacing) * 60);
   }
+  .pb-40 {
+    padding-bottom: calc(var(--spacing) * 40);
+  }
   .pl-2 {
     padding-left: calc(var(--spacing) * 2);
   }
